@@ -1,13 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
 
   <groupId>org.monarchinitiative.phenol</groupId>
   <artifactId>phenol</artifactId>
   <packaging>pom</packaging>
-  <version>1.2.6</version>
+  <version>1.3.1</version>
 
-  <name>${project.groupId}:${project.artifactId}</name>
+  <name>Phenol</name>
 
   <description>Phenotype Ontology Library: phenol</description>
   <url>https://github.com/monarchinitiative/phenol</url>
@@ -15,7 +16,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <hamcrest.version>1.3</hamcrest.version>
-    <junit.version>4.12</junit.version>
+    <junit.jupiter.version>5.3.2</junit.jupiter.version>
     <guava.version>22.0</guava.version>
     <checkstyle.version>2.17</checkstyle.version>
     <slf4j.version>1.7.24</slf4j.version>
@@ -83,27 +84,104 @@
     </developer>
   </developers>
 
-  <!-- SCM Information for Maven Central
+  <!-- SCM Information for Maven Central -->
   <scm>
-    <connection>scm:git:git@github.com:phenomics/ontolib.git</connection>
-    <developerConnection>scm:git:git@github.com:phenomics/ontolib.git</developerConnection>
-    <url>scm:git:git@github.com:phenomics/ontolib.git</url>
-  </scm>-->
+    <connection>scm:git:git@github.com:monarch-initiative/phenol.git</connection>
+    <developerConnection>scm:git:git@github.com:monarch-initiative/phenol.git</developerConnection>
+    <url>scm:git:git@github.com:monarch-initiative/phenol.git</url>
+    <tag>v${project.version}</tag>
+  </scm>
+
+  <distributionManagement>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <profiles>
+    <profile>
+      <!-- This profile should be activated only when a release is being built. -->
+      <!-- Then, GPG plugin is used to sign the artifacts. Note that you need to set up your GPG key first. -->
+      <!-- Activate the profile by running e.g. `mvn -DperformRelease=true clean deploy` -->
+      <id>release-sign-artifacts</id>
+      <activation>
+        <property>
+          <name>performRelease</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <!-- override version of GPG plugin to use new GPG signing features -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.5</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
+  <!-- keeps the logging artifacts in sync with each other -->
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-bom</artifactId>
+        <version>2.10.0</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
-    <!-- JUnit testing -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <!-- Hamcrest, JUnit addon -->
+    <!-- Hamcrest, JUnit addon-->
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-all</artifactId>
       <version>${hamcrest.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>${junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>${junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- JUnit Pioneer provides extensions fo Temp directories and things-->
+    <dependency>
+      <groupId>org.junit-pioneer</groupId>
+      <artifactId>junit-pioneer</artifactId>
+      <version>0.1.2</version>
       <scope>test</scope>
     </dependency>
 
@@ -122,31 +200,48 @@
       <version>${slf4j.version}</version>
     </dependency>
 
-  <!--
-   Embedded components such as libraries or frameworks should not declare a dependency on any SLF4J binding
-   but only depend on slf4j-api. When a library declares a compile-time dependency on a SLF4J binding,
-   it imposes that binding on the end-user, thus negating SLF4J's purpose.
-
-   <dependency>
-       <groupId>org.slf4j</groupId>
-       <artifactId>slf4j-jdk14</artifactId>
-       <version>${slf4j.version}</version>
-     </dependency>
-
-
+    <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j -->
     <dependency>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-enforcer-plugin</artifactId>
-      <version>3.0.0-M2</version>
-      <type>maven-plugin</type>
-      <exclusions>
-        <exclusion>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <scope>test</scope>
+    </dependency>
 
-        </exclusion>
-      </exclusions>
-    </dependency> -->
+    <!--
+     Embedded components such as libraries or frameworks should not declare a dependency on any SLF4J binding
+     but only depend on slf4j-api. When a library declares a compile-time dependency on a SLF4J binding,
+     it imposes that binding on the end-user, thus negating SLF4J's purpose.
+
+     <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-jdk14</artifactId>
+         <version>${slf4j.version}</version>
+       </dependency>
+
+
+      <dependency>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>3.0.0-M2</version>
+        <type>maven-plugin</type>
+        <exclusions>
+          <exclusion>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+
+          </exclusion>
+        </exclusions>
+      </dependency> -->
 
     <!-- Google Guava -->
     <dependency>
@@ -160,10 +255,44 @@
       <artifactId>jgrapht-core</artifactId>
       <version>${jgrapht.version}</version>
     </dependency>
+
   </dependencies>
 
   <build>
     <plugins>
+      <plugin>
+        <!-- Attach sources -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.2.1</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <!-- Generate javadocs -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9.1</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <additionalparam>-Xdoclint:none</additionalparam>
+        </configuration>
+      </plugin>
+
       <!-- JUnit testing -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -172,7 +301,7 @@
         <configuration>
           <forkCount>3</forkCount>
           <reuseForks>true</reuseForks>
-          <argLine>-Xmx1024m -XX:MaxPermSize=256m -Duser.region=US -Duser.timezone=UTC</argLine>
+          <argLine>-Xmx1024m -Duser.region=US -Duser.timezone=UTC</argLine>
           <systemPropertyVariables>
             <user.language>en</user.language>
             <user.region>US</user.region>
@@ -190,22 +319,24 @@
             <id>enforce</id>
             <configuration>
               <rules>
-               <!-- <DependencyConvergence /> -->
-                  <bannedPlugins>
-                    <!-- will only display a warning but does not fail the build. -->
-                    <level>ERROR</level>
-                    <excludes>
-                      <exclude>org.apache.maven.plugins:maven-verifier-plugin</exclude>
-                    </excludes>
-                    <message>Please consider using the maven-invoker-plugin (http://maven.apache.org/plugins/maven-invoker-plugin/)!</message>
-                  </bannedPlugins>
-                  <requireMavenVersion>
-                    <version>3.0</version>
-                  </requireMavenVersion>
-                  <requireJavaVersion>
-                    <version>1.8</version>
-                  </requireJavaVersion>
-                </rules>
+                <!-- <DependencyConvergence /> -->
+                <bannedPlugins>
+                  <!-- will only display a warning but does not fail the build. -->
+                  <level>ERROR</level>
+                  <excludes>
+                    <exclude>org.apache.maven.plugins:maven-verifier-plugin</exclude>
+                  </excludes>
+                  <message>Please consider using the maven-invoker-plugin
+                    (http://maven.apache.org/plugins/maven-invoker-plugin/)!
+                  </message>
+                </bannedPlugins>
+                <requireMavenVersion>
+                  <version>3.0</version>
+                </requireMavenVersion>
+                <requireJavaVersion>
+                  <version>1.8</version>
+                </requireJavaVersion>
+              </rules>
             </configuration>
             <goals>
               <goal>enforce</goal>
@@ -214,55 +345,6 @@
         </executions>
       </plugin>
 
-
-
-
-
-
-
-
-      <!-- Javadoc generation. -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.0.1</version>
-        <configuration>
-          <defaultVersion>${project.version}</defaultVersion>
-          <show>public</show>
-          <nohelp>true</nohelp>
-          <header>${project.artifactId}, ${project.version}</header>
-          <footer>${project.artifactId}, ${project.version}</footer>
-          <doctitle>${project.artifactId}, ${project.version}</doctitle>
-          <destDir>${project.version}</destDir>
-          <reportOutputDirectory>${project.reporting.outputDirectory}/apidocs/api/</reportOutputDirectory>
-        </configuration>
-        <executions>
-          <execution>
-            <id>aggregate</id>
-            <goals>
-              <goal>aggregate</goal>
-            </goals>
-            <phase>site</phase>
-            <configuration>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-      <!-- Source attachments -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>3.0.1</version>
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
 
       <!-- Jacoco Coverage Reports -->
       <plugin>
@@ -361,7 +443,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore />
+                    <ignore/>
                   </action>
                 </pluginExecution>
                 <pluginExecution>
@@ -378,7 +460,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore />
+                    <ignore/>
                   </action>
                 </pluginExecution>
               </pluginExecutions>
